bin/tests/snapshots/embedded_code__7656ffb88f0d2645c0f7efb9f5aee23f_fix.snap
---
source: bin/tests/embedded_code.rs
---
{ scripts.x.exec = ''
  python3 -c 'import sys; print(undefined_name)'
''; }
---
