bin/tests/snapshots/embedded_code__7656ffb88f0d2645c0f7efb9f5aee23f_lint_json.snap
---
source: bin/tests/embedded_code.rs
---
{ scripts.x.exec = ''
  python3 -c 'import sys; print(undefined_name)'
''; }
---
{
  "file": "<temp_file_path>",
  "report": [
    {
      "name": "undeclared_command",
      "note": "Command in a shell script isn't declared or doesn't exist",
      "code": 31,
      "severity": "Warn",
      "diagnostics": [
        {
          "at": {
            "from": {
              "line": 2,
              "column": 3
            },
            "to": {
              "line": 2,
              "column": 10
            }
          },
          "message": "`python3` isn't declared",
          "suggestion": null,
          "fixable": false,
          "help": "Add `pkgs.python3` to `packages`. If the environment provides it, add `# statix provided=python3` at the top of the script (or `provided = [ \"python3\" ]` in statix.toml); if it's optional, check for it with `command -v python3`."
        }
      ]
    },
    {
      "name": "embedded_code",
      "note": "Error in a jq, awk or python program inside a shell script",
      "code": 34,
      "severity": "Warn",
      "diagnostics": [
        {
          "at": {
            "from": {
              "line": 2,
              "column": 33
            },
            "to": {
              "line": 2,
              "column": 48
            }
          },
          "message": "python: Undefined name `undefined_name` (F821)",
          "suggestion": null,
          "fixable": false,
          "help": "See https://docs.astral.sh/ruff/rules/undefined-name"
        }
      ]
    }
  ]
}
